Improvements in responsiveness and fixing overlap issues.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ g.group0 circle {
 }
 
 g.tick line {
-  stroke: blue;
+  stroke: black;
 }
 
 
